welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: not found: value False
while(estFaceMur==False){
                  ^